--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -51,6 +51,14 @@
 
 @import 'variables';
 
+.fullWidth {
+   width: 100%;
+   margin-left: auto;
+   margin-right: auto;
+   max-width: initial;
+   min-height: 510px;
+}
+
 body {
   background-color: #F2F2F2;
   font-family: $open-sans;
@@ -87,7 +95,7 @@ input[type="submit"] {
   background-color: $dark-blue;
   background: url('../../dist/images/main-banner-bg.jpg') no-repeat top left;
   background-size: cover;
-  min-height: 580px;
+  min-height: 510px;
 }
 .main-banner {
   padding: 1rem 1.5rem;
@@ -142,7 +150,7 @@ input[type="submit"] {
   border-top: 6px solid #C82027;
   @include breakpoint(medium) {
     position: relative;
-    margin-top: -100px;
+    //top: -80px;
   }
 }
 .main-content-wrapper {
@@ -198,5 +206,10 @@ input[type="submit"] {
 .photo-julio {
   width: 142px;
   margin: .5rem auto 1rem auto;
-  display: block;  
+  display: block;
+}
+.cta-curso-intensivo {  
+  width: 614px;
+  margin: 0 auto;
+  display: block;
 }
